# Business_Insight_Engine_Project

./: CHANGELOG.md  DATAREADME.md  README.md  SECURITY.md  progress-log (1).md  progress-log.md  pyproject.toml  requirements.txt
.github/workflows/: tf-nlp-ci.yml
backend/: app.py  data.csv  latest_app.py
backend/instance/: site.db
backend/uploads/: utils.py
dags/: sentiment_pipeline.py
data/: bench (1).csv  preprocessed_reviews.csv  readme
frontend/src/: App.jsx  History.jsx  Home.jsx  Login.jsx  Navbar.jsx  Signup.jsx  app.css
frontend/src/assets/: download.jfif
integration_llm_to_models/: LLM Integration with Deep Learning.ipynb  Readme.md
model_training/: Data Preparation.ipynb  Models_on_200000_10 EPOCHS.ipynb  data-analysis.ipynb  data-quality-check.ipynb  data-understanding.ipynb  model-building-and-training.ipynb  model_DL_sent.ipynb
prompt_engineerring/: LLM_promptEng.ipynb  Readme.md
tests/: test_ci.py
